--- a/NeighborhoodHistory/Base.lproj/Main.storyboard
+++ b/NeighborhoodHistory/Base.lproj/Main.storyboard
@@ -16,6 +16,12 @@
                     <view key="view" contentMode="scaleToFill" id="NgA-qq-VHm">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <arView multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="GjH-rE-YaV">
+                                <rect key="frame" x="0.0" y="44" width="414" height="769"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </arView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="jCm-Ci-2jK"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
@@ -25,7 +31,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="NuD-GN-Ycj" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="367" y="-763"/>
+            <point key="canvasLocation" x="366.66666666666669" y="-763.39285714285711"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="AYt-Tg-G3D">
@@ -34,6 +40,12 @@
                     <view key="view" contentMode="scaleToFill" id="VPE-pB-fqw">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="Qfk-Ju-e15">
+                                <rect key="frame" x="0.0" y="88" width="414" height="725"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </mapView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="ymM-do-pF6"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
@@ -43,7 +55,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kei-w6-eZa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="367" y="-1414"/>
+            <point key="canvasLocation" x="366.66666666666669" y="-1414.2857142857142"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="aJv-BW-1sG">
