--- a/NeighborhoodHistory/Base.lproj/Main.storyboard
+++ b/NeighborhoodHistory/Base.lproj/Main.storyboard
@@ -474,10 +474,10 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="f3g-pg-EbN">
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="f3g-pg-EbN">
                                 <rect key="frame" x="0.0" y="107.5" width="414" height="705.5"/>
                                 <subviews>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="d7r-0e-4Ah">
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="d7r-0e-4Ah">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="705.5"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <prototypes>
@@ -497,48 +497,44 @@
                                                     </subviews>
                                                 </tableViewCellContentView>
                                             </tableViewCell>
-                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="280" id="eRP-Dh-OuU">
-                                                <rect key="frame" x="0.0" y="245.5" width="414" height="280"/>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="232" id="eRP-Dh-OuU">
+                                                <rect key="frame" x="0.0" y="245.5" width="414" height="232"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="eRP-Dh-OuU" id="8UP-KJ-ZTV">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="280"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="232"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gML-2y-2Qz">
-                                                            <rect key="frame" x="7" y="5" width="87.5" height="20.5"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                            <nil key="textColor"/>
-                                                            <nil key="highlightedColor"/>
-                                                        </label>
-                                                        <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Tell us more about this..." minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aFm-Rr-qa0">
-                                                            <rect key="frame" x="10" y="40" width="384" height="200"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="height" constant="260" id="f2c-HJ-ab4"/>
-                                                            </constraints>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                            <textInputTraits key="textInputTraits"/>
-                                                        </textField>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="T2a-M6-dcZ">
+                                                            <rect key="frame" x="20" y="11" width="374" height="210"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Description" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cc9-Sj-2ZV">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <nil key="textColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Tell us more about this place..." textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HMH-lT-vxY">
+                                                                    <rect key="frame" x="0.0" y="20.5" width="374" height="189.5"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                                    <textInputTraits key="textInputTraits"/>
+                                                                </textField>
+                                                            </subviews>
+                                                        </stackView>
                                                     </subviews>
                                                     <constraints>
-                                                        <constraint firstItem="gML-2y-2Qz" firstAttribute="leading" secondItem="8UP-KJ-ZTV" secondAttribute="leading" constant="7" id="QPW-4K-8hE"/>
-                                                        <constraint firstItem="gML-2y-2Qz" firstAttribute="top" secondItem="8UP-KJ-ZTV" secondAttribute="top" constant="5" id="rfb-ps-199"/>
+                                                        <constraint firstAttribute="trailingMargin" secondItem="T2a-M6-dcZ" secondAttribute="trailing" id="5ig-PW-dKQ"/>
+                                                        <constraint firstItem="T2a-M6-dcZ" firstAttribute="leading" secondItem="8UP-KJ-ZTV" secondAttribute="leadingMargin" id="E92-AK-Icg"/>
+                                                        <constraint firstAttribute="bottomMargin" secondItem="T2a-M6-dcZ" secondAttribute="bottom" id="xAq-4N-NaH"/>
+                                                        <constraint firstItem="T2a-M6-dcZ" firstAttribute="top" secondItem="8UP-KJ-ZTV" secondAttribute="topMargin" id="y7M-Z4-h3C"/>
                                                     </constraints>
                                                 </tableViewCellContentView>
                                             </tableViewCell>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="117" id="Fzo-E5-lrv">
-                                                <rect key="frame" x="0.0" y="525.5" width="414" height="117"/>
+                                                <rect key="frame" x="0.0" y="477.5" width="414" height="117"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Fzo-E5-lrv" id="wAc-JO-SUW">
                                                     <rect key="frame" x="0.0" y="0.0" width="414" height="117"/>
                                                     <autoresizingMask key="autoresizingMask"/>
-                                                    <subviews>
-                                                        <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Where can people find this place?" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kQM-qj-cFk">
-                                                            <rect key="frame" x="27" y="41" width="360" height="35"/>
-                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                            <textInputTraits key="textInputTraits"/>
-                                                        </textField>
-                                                    </subviews>
                                                 </tableViewCellContentView>
                                             </tableViewCell>
                                         </prototypes>
@@ -552,7 +548,9 @@
                             <constraint firstItem="DRG-YQ-uqg" firstAttribute="centerX" secondItem="f3g-pg-EbN" secondAttribute="centerX" id="ALr-Bh-QVP"/>
                             <constraint firstItem="DRG-YQ-uqg" firstAttribute="top" secondItem="ivF-iG-Y3i" secondAttribute="top" constant="30" id="B5h-st-Uxy"/>
                             <constraint firstItem="f3g-pg-EbN" firstAttribute="top" secondItem="DRG-YQ-uqg" secondAttribute="bottom" id="GqG-vQ-LSb"/>
+                            <constraint firstItem="f3g-pg-EbN" firstAttribute="bottom" secondItem="ivF-iG-Y3i" secondAttribute="bottom" id="Hdc-yR-YjH"/>
                             <constraint firstItem="DRG-YQ-uqg" firstAttribute="centerX" secondItem="SJh-Hu-NCr" secondAttribute="centerX" id="UJY-g3-hzt"/>
+                            <constraint firstItem="f3g-pg-EbN" firstAttribute="leading" secondItem="SJh-Hu-NCr" secondAttribute="leading" id="qgq-4v-QNM"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="" id="kNE-6R-Zyo">
