--- a/NeighborhoodHistory/Base.lproj/Main.storyboard
+++ b/NeighborhoodHistory/Base.lproj/Main.storyboard
@@ -35,10 +35,10 @@
             </objects>
             <point key="canvasLocation" x="366.66666666666669" y="-763.39285714285711"/>
         </scene>
-        <!--View Controller-->
+        <!--Expanded Card View Controller-->
         <scene sceneID="Zkp-Ns-lBT">
             <objects>
-                <viewController id="b2N-be-CpQ" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ExpandedCardViewController" title="Expanded Card View Controller" id="b2N-be-CpQ" customClass="ExpandedCardViewController" customModule="NeighborhoodHistory" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="MUR-ie-2RW">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -106,7 +106,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gxx-id-fg1" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1186.9565217391305" y="-763.39285714285711"/>
+            <point key="canvasLocation" x="-686" y="-1414"/>
         </scene>
         <!--Map View Controller-->
         <scene sceneID="AYt-Tg-G3D">
@@ -273,7 +273,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d3F-rc-iBJ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1188" y="-1480"/>
+            <point key="canvasLocation" x="1158" y="-1414"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="HZJ-6b-tQv">
