--- a/NeighborhoodHistory/Base.lproj/Main.storyboard
+++ b/NeighborhoodHistory/Base.lproj/Main.storyboard
@@ -719,6 +719,9 @@
                                 <state key="normal" title="Next">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
+                                <connections>
+                                    <segue destination="0GU-eD-U0m" kind="show" id="ZrO-TM-nPD"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ivF-iG-Y3i"/>
@@ -744,6 +747,60 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="nrE-3j-ImG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="282.60869565217394" y="-115.17857142857142"/>
+        </scene>
+        <!--Date View Controller-->
+        <scene sceneID="1qV-iw-QyW">
+            <objects>
+                <viewController id="0GU-eD-U0m" customClass="DateViewController" customModule="NeighborhoodHistory" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ez8-WP-9mb">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="When is your photo from?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="b9A-Vg-VlP">
+                                <rect key="frame" x="30" y="40" width="325" height="34"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="28"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Choose a date" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WN5-pl-Udv">
+                                <rect key="frame" x="97" y="230" width="220" height="34"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="220" id="oCD-JK-8bN"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="rjz-op-gq0">
+                                <rect key="frame" x="110" y="398.5" width="194" height="45"/>
+                                <color key="backgroundColor" red="0.4506805539" green="0.68077969549999995" blue="0.74118822809999996" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="ArF-q3-ebd"/>
+                                    <constraint firstAttribute="width" constant="194" id="wKd-NG-SLJ"/>
+                                </constraints>
+                                <state key="normal" title="Upload!">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="NGF-we-wGt"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="rjz-op-gq0" firstAttribute="centerX" secondItem="ez8-WP-9mb" secondAttribute="centerX" id="5EQ-7l-OwS"/>
+                            <constraint firstItem="b9A-Vg-VlP" firstAttribute="leading" secondItem="NGF-we-wGt" secondAttribute="leading" constant="30" id="JqI-NO-Yf7"/>
+                            <constraint firstItem="rjz-op-gq0" firstAttribute="centerY" secondItem="ez8-WP-9mb" secondAttribute="centerY" id="Tcn-0A-aN0"/>
+                            <constraint firstItem="WN5-pl-Udv" firstAttribute="centerX" secondItem="ez8-WP-9mb" secondAttribute="centerX" id="qvu-dA-YKr"/>
+                            <constraint firstItem="WN5-pl-Udv" firstAttribute="top" secondItem="ez8-WP-9mb" secondAttribute="top" constant="230" id="vMq-Be-FTa"/>
+                            <constraint firstItem="b9A-Vg-VlP" firstAttribute="top" secondItem="NGF-we-wGt" secondAttribute="top" constant="40" id="zi8-l9-Z2w"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" id="TM3-GQ-6MG"/>
+                    <connections>
+                        <outlet property="dateText" destination="WN5-pl-Udv" id="9yF-ko-98V"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ssW-0Z-yLO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1188.4057971014495" y="-107.14285714285714"/>
         </scene>
     </scenes>
     <resources>
